Add exercise_3 implementation

--- a/basic/exercise_2.html
+++ b/basic/exercise_2.html
@@ -10,5 +10,9 @@
     
 
     <script type="text/javascript" src="exercise_2.js"></script>
+    <script>
+        let age = 25;
+        console.log(` and I am ${age} years old.`);
+    </script>
 </body>
 </html>
